# pokegym

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
apps/PokeGymApp/: CMakeLists.txt  main.cpp
assets/pokemon/stats/: moves.json  statistics.json
game/: CMakeLists.txt
game/include/game/: math.h
game/src/: math.cpp
libs/BattleEngine/: CMakeLists.txt
libs/BattleEngine/include/BattleEngine/battle/: Action.hpp  Battle.hpp  BattleEngine.hpp  BattleEvent.hpp  BattleObserver.hpp  DamageCalculator.hpp  Result.hpp  TypeEffectiveness.hpp
libs/BattleEngine/include/BattleEngine/manager/: PokemonManager.hpp
libs/BattleEngine/include/BattleEngine/pokemon/: Move.hpp  Pokemon.hpp  Types.hpp
libs/BattleEngine/include/BattleEngine/trainer/: ActionSelection.hpp  RandomActionSelector.hpp  Trainer.hpp
libs/BattleEngine/src/battle/: Battle.cpp  BattleEngine.cpp  DamageCalculator.cpp  TypeEffectiveness.cpp
libs/BattleEngine/src/manager/: PokemonManager.cpp
libs/BattleEngine/src/pokemon/: Move.cpp  Pokemon.cpp
libs/BattleEngine/src/trainer/: RandomActionSelector.cpp  Trainer.cpp
libs/BattleRenderer/: CMakeLists.txt
libs/BattleRenderer/include/BattleRenderer/console/: ConsoleActionSelector.hpp  ConsoleBattleRenderer.hpp
libs/BattleRenderer/include/BattleRenderer/sdl/: SdlActionSelector.hpp  SdlBattleRenderer.hpp  TextureManager.hpp
libs/BattleRenderer/src/console/: ConsoleActionSelector.cpp  ConsoleBattleRenderer.cpp
libs/BattleRenderer/src/sdl/: SdlActionSelector.cpp  SdlBattleRenderer.cpp  TextureManager.cpp
pokegym/: CMakeLists.txt  main.cpp
pokegym/include/pokegym/battle/: Action.hpp  Battle.hpp  BattleEngine.hpp  BattleEvent.hpp  BattleObserver.hpp  DamageCalculator.hpp  Result.hpp
pokegym/include/pokegym/pokemon/: Move.hpp  Pokemon.hpp
pokegym/include/pokegym/presentation/: ConsoleActionSelector.hpp  ConsoleBattleRenderer.hpp  SdlActionSelector.hpp  SdlBattleRenderer.hpp
pokegym/include/pokegym/trainer/: ActionSelection.hpp  RandomActionSelector.hpp  Trainer.hpp
pokegym/src/battle/: Battle.cpp  BattleEngine.cpp  DamageCalculator.cpp
pokegym/src/pokemon/: Move.cpp  Pokemon.cpp
pokegym/src/presentation/: ConsoleActionSelector.cpp  ConsoleBattleRenderer.cpp  SdlActionSelector.cpp  SdlBattleRenderer.cpp
pokegym/src/trainer/: RandomActionSelector.cpp  Trainer.cpp
scripts/: build.sh  clean.sh  coverage.sh  run.sh  tests.sh
tests/: CMakeLists.txt
tests/game/: CMakeLists.txt  math_test.cpp
tests/pokegym/: BattleEngineTest.cpp  CMakeLists.txt
